# django_template

./: .dockerignore  .gitignore  Dockerfile  LICENSE  constants.py  docker-compose.yml  pyproject.toml
