[project]
name = "django-template"
version = "0.1.0"
description = ""
authors = [
    {name = "evgen"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "loguru (>=0.7.3,<0.8.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "django (>=5.2.8,<6.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "psycopg2 (>=2.9.11,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
